--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
 		<meta name="theme-color" content="#000000" />
 		<link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.1/dist/leaflet.css" />
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+		<link rel=”shortcut icon” href=”%PUBLIC_URL%/favicon-32x32”>
+
 		<title>IPLoc</title>
 	</head>
 	<body>
